Stop managed jobs running on disabled nodes